# libmav

./: .gitignore  BuiltInMessages.h  CMakeLists.txt  CRC.h  Connection.h  DynamicMessage.h  LICENSE  Message.h  MessageDefinition.h  MessageSet.h  Network.h  README.md  Serial.h  SerialInterface.h  TCP.h  UDPPassive.h  gcovr.cfg  main.cpp  sonar-project.properties  utils.h
.github/workflows/: test.yml
cmake/: toolchain-mingw64.cmake
include/mav/: BuiltInMessages.h  Connection.h  DirectIO.h  Message.h  MessageDefinition.h  MessageFieldIterator.h  MessageSet.h  Network.h  Serial.h  SerialInterface.h  TCPClient.h  TCPServer.h  UDPClient.h  UDPServer.h  poll.h  utils.h
include/mav/opinionated_protocols/: MessageBuilder.h  MissionClient.h  MissionMessageBuilders.h  ParamClient.h  ProtocolUtils.h
tests/: CMakeLists.txt  DirectIO.cpp  Message.cpp  MessageDefinition.cpp  MessageFieldIterator.cpp  MessageSet.cpp  Network.cpp  TCP.cpp  UDP.cpp  minimal.h  test_binary_parsing.cpp  test_main.cpp  test_noexcept_api.cpp
tests/opinionated_protocols/: MissionClient.cpp  ParamClient.cpp  ProtocolTestSequencer.h
